# subjectflow-backend

./: .gitignore  main.py  pyproject.toml  requirements.txt  scripts.py
.github/workflows/: black_workflow.yaml  pytest_workflow.yaml
app/: main.py  test_main.py
app/models/: subjectModel.py
app/routers/: dbRouter.py  test_dbRouter.py
subjectflow_backend/: main.py
subjectflow_backend/api/: subjectApi.py
subjectflow_backend/models/: code.py  reqCriteria.py  subject.py
subjectflow_backend/routers/: dbRouter.py  test_dbRouter.py
subjectflow_backend/scraper/: logic.py  prereqHandling.py  scraper.py  scrapingConstants.py  utils.py
subjectflow_backend/utils/: dllist.py
tests/: test_dbRouter.py  test_main.py
