[tool.poetry]
name = "subjectflow-backend"
version = "0.1.0"
description = ""
authors = ["crispycaterpillar <crispy.caterpillar@gmail.com>"]
readme = "README.md"
packages = [{include = "subjectflow_backend"}]

[tool.poetry.scripts]
server = 'scripts:server'
scrape = 'subjectflow_backend.scraper.scraper:scrape'

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["all"], version = "^4.3.3"}
pydantic = "^1.10.6"
fastapi = {extras = ["all"], version = "^0.95.0"}
requests = "^2.28.2"
python-dotenv = "^1.0.0"
selenium = "^4.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
uvicorn = "^0.21.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
